--- a/MasterPage.xaml
+++ b/MasterPage.xaml
@@ -5,11 +5,16 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:KhabirovaMasterPol"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
+      d:DesignHeight="450" d:DesignWidth="800" FontFamily="Segoe UI" IsVisibleChanged="Page_IsVisibleChanged">
 
     <Grid>
-        
-        <ListView Name="MasterListView" HorizontalContentAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            
+        </Grid.RowDefinitions>
+        <Button Name="Add" Content="Добавить" Click="Add_Click" Margin="5" HorizontalAlignment="Center" Grid.Row="0" Width="150" Height="30"></Button>
+        <ListView Name="MasterListView" HorizontalContentAlignment="Stretch" Grid.Row="1">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -27,6 +32,7 @@
                             <TextBlock Text="{Binding PartnersRaiting, StringFormat = Рейтинг: {0}}" FontSize="20"></TextBlock>
                         </StackPanel>
                         <TextBlock Grid.Column="1" Text="{Binding SalePercent, StringFormat= 0 \\%}" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                        <Button Grid.Column="1" HorizontalAlignment="Right" Name="EditButton" Content="Редактировать" Click="EditButton_Click" Height="30"></Button>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
